<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Ezlinq</string>
    <string name="str_welcome_to_tikl">Welcome to Ezlinq</string>
    <string name="str_instantly_share_anything">Instantly share anything</string>
    <string name="str_set_up_your_tikl">Set up your Ezlinq</string>
    <string name="str_buy_a_tikl">Buy a Ezlinq</string>
    <string name="str_already_have_tikl">Already have Ezlinq?</string>
    <string name="str_sign_in">Sign in</string>
    <string name="str_welcome_back">Welcome back</string>
    <string name="str_email">email</string>
    <string name="str_password">password</string>
    <string name="str_log_in">Log in</string>
    <string name="str_forgot_password">Forgot password?</string>
    <string name="str_menu_home">Home</string>
    <string name="str_menu_Edit_proile">Edit Profile</string>
    <string name="str_menue_Activate">Activate</string>
    <string name="str_menue_Read_a_Tickle">Read Ezlinq</string>
    <string name="str_menue_my_QR_code">My QR Code</string>
    <string name="str_menue_Buy_a_tickle">Buy Ezlinq</string>
    <string name="str_menue_Go_pro">Go Pro</string>
    <string name="str_menue_Home_to_tick">How to Ezlinq</string>
    <string name="str_menue_Logout">Log out</string>
    <string name="str_toogle_on">TAP On</string>
    <string name="str_toogle_off">TAP Off</string>
    <string name="str_tickle_version_nav_footer">Version 3.3.2</string>
    <string name="str_back_to_login">Back to Login</string>
    <string name="str_send_code">Send Code</string>
    <string name="str_username">username</string>
    <string name="str_bio">Bio</string>
    <string name="str_your_gender">Your gender</string>
    <string name="str_your_date_of_birth">Your date of birth</string>
    <string name="str_make_profile_public">Make Profile Private</string>
    <string name="str_others_can_view_your_profile_using_the_link_tiklme_co_anoy">Others can view your profile using the link: api.ezlinq.me/</string>
    <string name="str_add_social_media">Add Social Media</string>
    <string name="str_add_music">Add Music</string>
    <string name="str_add_payment">Add Payment</string>
    <string name="str_add_more">Add More</string>
    <string name="str_tikl_ambassador">TAP Ambassador</string>
    <string name="str_save_profile">Save Profile</string>
    <string name="str_make_when_you">Make $ when you TAP someone and they use the Buy TAP banner on your profile</string>
    <string name="str_tikl_activate_text">Your Ezlinq will be activated with the profile name</string>
    <string name="str_handl_activate_text">Your Handl X TAP will be activated with the profile</string>
    <string name="str_keychain_activate_text">Your TAP Keychain will be activated with the profile</string>
    <string name="str_by_registering">By registering, you agree to our Terms and Privacy Policy</string>
    <string name="Str_six_digit_code">Enter 6 digit code</string>
    <string name="str_reset_password">Reset Password</string>
    <string name="str_enter_pass">Enter password</string>
    <string name="str_re_enter_pass">re-enter password</string>
    <string name="str_reset">Reset password</string>
    <string name="str_add_items">Add items</string>
    <string name="save">Save</string>
    <string name="str_connect">Connect</string>
    <string name="str_disconnect">Disconnected</string>
    <string name="str_which_tikl_product_whould_you_like_to_activate">Which Ezlinq product whould you like to activate?</string>
    <string name="direct_off">Direct Off</string>
    <string name="direct_on">Direct On</string>
    <string name="edit_profile">Edit profile</string>
    <string name="your_tikl_opens_directly_to_your_first_link">Your Ezlinq opens directly to your first link transparent</string>
    <string name="direct_on_str" translatable="false">Your Ezlinq opens directly to your first link</string>
    <string name="please_enter_your_username">Please Enter Your Username</string>
    <string name="confirm">Confirm</string>
    <string name="are_you_sure_want_to_logout">Are you sure want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="logout">Logout</string>
    <string name="failed_to_read_Data">Failed to Read Data</string>
    <string name="crop_image">Crop Image</string>
    <string name="done">Done</string>
    <string name="no_space_allowed_in_username">No space allowed in username</string>
    <string name="username_cant_contain_symbol">User Name Can\'t contains / symbol</string>
    <string name="username_sould_be_between_5_to_25">User Name should between 3 to 25 Characters</string>
    <string name="name_sould_be_between_5_to_25">Name should between 3 to 25 Characters</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="select_picture">Select Picture</string>
    <string name="remove_image">Remove Image</string>
    <string name="do_you_want_to_remove_image">Do you want to remove image</string>
    <string name="select_your_gender">Select your gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="non_binary">Non-Binary</string>
    <string name="prefer_not_to_say">Prefer not to say</string>
    <string name="share_profile_link">Share profile link</string>
    <string name="place_your_tikl_to_activate">Place your TAP to activate</string>
    <string name="tap_here_to_activate">Activate</string>
    <string name="tikl_activated_successfully">TAP activate Successfully</string>
    <string name="tikl_activation_failed">TAP Activation Failed</string>
    <string name="ready_to_scan">Ready to Scan</string>
    <string name="hold_the_pop_to_the_middle_back_of_your_phone_to_view_profile_hold_the_pop_there_until_the_profile_appears">Hold the pop to the middle back of your phone to view profile.Hold the pop there until the profile appears</string>
    <string name="cancel">Cancel</string>
    <string name="how_to_tik_to_iphone">How to Ezlinq to iphone</string>
    <string name="tap_your_tikl_to_the_very_top_to_pop_to_an_iphone_xr_and_newer">Tap Ezlinq to the very top to TAP to an Iphone XR and newer</string>
    <string name="how_to_tikl_to_android">How to Ezlinq to Android</string>
    <string name="tap_your_tikl_to_the_middle_to_tik_to_an_android">Tap your Ezlinq to the middle to TAP to an Android</string>
    <string name="make_sure_they_have_nfc_is_turned_on_in_setting_some_androids_have_this_off_by_default">Make sure they have NFC is turned on in setting Some Androids have this off by default</string>
    <string name="str_continue">Continue</string>
    <string name="tikl_direct">TAP Direct</string>
    <string name="your_tikl_profile">Your TAP Profile</string>
    <string name="turn_tikl_direct_off_to_share_your_full_tikl_profile">Turn TAP Direct off to share your full Ezlinq Profile</string>
    <string name="your_tikl_profile_is_fully_customizable_and_links_can_be_sorted_using_drag_and_drop">Your TAP profile is fully customizable and links can be sorted using drag and drop</string>
    <string name="your_qr_code">Your QR Code</string>
    <string name="use_your_tikl_qr_code_to_share_with_older_phone_models">Use your Ezlinq QR code to share with older phone models</string>
    <string name="your_qr_code_can_be_accessed_on_the_top_right_of_your_profile_and_in_the_main_menu">Your QR code can be accessed on the top right of your profile and in the main menu</string>
    <string name="let_s_get_tikin">Let\'s get Ezlinq</string>
    <string name="your_pop_count_is_the_number_of_times_you_share_with_tikl">Your Ezlinq taps is the number of times  you shared your profile</string>
    <string name="build_your_pop_streak_and_pop_count_to_grow_your_network_and_hit_new_pop_levels">Build your Ezlinq streak and Ezlinqs taps to grow your network and hit new Ezlinq levels</string>
    <string name="go_to_activate">Go to activate</string>
    <string name="create_your_profile">Create your profile</string>
    <string name="phone">phone</string>
    <string name="confirm_password">confirm password</string>
    <string name="username">Username</string>

    <string name="enter_your_popl_email_and_we_ll_nsend_you_a_6_digit_code">Enter your TAP email and we\'ll\nsend you a 6 digit code</string>
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="your_reset_password_email_has_been_nsent_if_you_dont_t_see_it_check_spam">Your reset password email has been\nsent.if you dont\'t see it check spam</string>
    <string name="password_dosent_match">Password Doesn\'t Match</string>
    <string name="set_your_password">Set your password</string>
    <string name="this_is_not_a_valid_link">This is not a valid link</string>
    <string name="you_dont_have_browser">You want have browser to open webpage</string>
    <string name="when_someone_tiks_you_they_will_be_saved_here_in_your_people">When you TAP someone they will be shown here</string>
    <string name="search_people">Search people</string>
    <string name="open">open</string>
    <string name="delete">Delete</string>
    <string name="social">Social</string>
    <string name="views">Views:</string>
    <string name="tap_the_tikl_direct_button_on_your_profile_to_turn_on">Tap the Ezlinq Direct button on your profile to turn on</string>
    <string name="when_tikl_direct_is_on_your_popl_will_on_directly_to_the_first_link_on_your_profile">When TAP Direct is on, your TAP will on directly to the first link on your profile</string>
    <string name="Please_Select_at_least_One_Platform_to_select_Enable_Direct">Please Select at least One Platform to select Enable Direct</string>
    <string name="profile_is_not_public">Profile is not public</string>
    <string name="create_vcf">Create VCF</string>
    <string name="vcf_saved">VCF Saved</string>
    <string name="vfc_created_at">VCF Created at </string>
    <string name="Enter_you_website">Enter you website</string>
    <string name="open_the">Open the</string>
    <string name="app_and_go_to_your_profile"> app and go to your Profile. Your</string>
    <string name="username_will_be_at_the_top_of_the_screen">username will be at the top of the screen.</string>
    <string name="enter_your_url">Enter your url</string>
    <string name="str_taps" translatable="false">TAP :0</string>
    <string name="almost_done_create_a_username_for_nyour_account">Create a username for your account</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="older_iphone_can_use_the_nfc_widget_in_control_center_to_read_your_tikl">Older iphone can use the nfc widget in control center to read your Ezlinq</string>
    <string name="str_profile_guide_direct_off">Your Ezlinq opens directly to your first link transparent </string>
    <string name="str_profile_guide_direct_on">Your Ezlinq opens directly to your first link</string>
    <string name="enter_your_tap_email_and_we_ll_n_send_you_a_6_digit_code">Enter your_TAP email and we\'ll \n send you a 6 digit code</string>
    <string name="str_username_edit">Username</string>
    <string name="str_read_gotap">Read Ezlinq</string>
    <string name="str_name">name</string>
    <string name="str_connected">Connected</string>
    <string name="featured">Premium</string>


</resources>