<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignInActivity"
    android:background="@color/color_black">
    <ImageView
        android:id="@+id/iv_tikl_sign_in"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:src="@drawable/ic_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.1"/>
    <TextView
        android:id="@+id/tv_welcome_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_welcome_back"
        android:textSize="@dimen/_20ssp"
        android:textColor="@color/color_text"
        android:fontFamily="@font/roboto_regular"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/iv_tikl_sign_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/et_email_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/str_email"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@drawable/bg_rectangle_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome_back"/>

    <EditText
        android:id="@+id/et_password_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/str_password"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@drawable/bg_rectangle_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_email_sign_in"/>

    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progressBar"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:indeterminateTint="@color/white"
        android:layout_marginEnd="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_30sdp"
        android:elevation="@dimen/_2sdp"
        app:layout_constraintTop_toTopOf="@+id/btn_log_in"
        app:layout_constraintBottom_toBottomOf="@+id/btn_log_in"
        app:layout_constraintStart_toStartOf="@+id/btn_log_in"
        app:layout_constraintEnd_toEndOf="@+id/btn_log_in"/>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_log_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_log_in"
        app:cornerRadius="@dimen/_5sdp"
        android:backgroundTint="@color/app_color"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:fontFamily="@font/roboto_bold"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_30sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_password_sign_in"/>
    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_forgot_password"
        android:textSize="@dimen/_14ssp"
        android:fontFamily="@font/roboto_light"
        android:layout_marginTop="@dimen/_20sdp"
        android:textColor="@color/color_text"
        app:layout_constraintTop_toBottomOf="@id/btn_log_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>