<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignUpActivity"
    android:background="@color/color_black">

    <ImageView
        android:id="@+id/iv_tikl_sign_up"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:src="@drawable/ic_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"/>

    <TextView
        android:id="@+id/tv_create_profile_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_your_profile"
        android:textSize="@dimen/_20ssp"
        android:textColor="@color/color_text"
        android:fontFamily="@font/roboto_regular"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@+id/iv_tikl_sign_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
        android:id="@+id/et_name_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/str_username"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@drawable/bg_rectangle_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_create_profile_sign_up"/>

    <EditText
        android:id="@+id/et_email_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/str_email"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@drawable/bg_rectangle_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_name_sign_up"/>
    <LinearLayout
        android:id="@+id/layout_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@color/grey_100"
        android:paddingVertical="@dimen/_5sdp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@+id/et_email_sign_up">

        <com.hbb20.CountryCodePicker
            android:id="@+id/ccp"
            app:ccp_defaultLanguage="ENGLISH"
            android:layout_width="wrap_content"
            app:ccp_defaultPhoneCode="355"
            android:layout_height="wrap_content"
            app:ccp_countryPreference="us,in"
            android:textColor="@color/color_text"
            app:ccp_arrowColor="@color/grey_100"
            app:ccp_flagBorderColor="@color/color_text"
            app:ccpDialog_backgroundColor="@color/white"
            />

        <EditText
            android:id="@+id/et_carrierNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:hint="@string/phone"
            android:background="@color/grey_100"
            android:textColor="@color/black"
            android:inputType="phone"
            android:singleLine="true" />
    </LinearLayout>
<!--    <com.hbb20.CountryCodePicker-->
<!--        android:id="@+id/et_phone_sign_up"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="@dimen/_40sdp"-->
<!--        android:hint="phone number"-->
<!--        android:inputType="number"-->
<!--        android:layout_marginTop="@dimen/_16sdp"-->
<!--        android:layout_marginStart="@dimen/_20sdp"-->
<!--        android:layout_marginEnd="@dimen/_20sdp"-->
<!--        android:background="@drawable/bg_rectangle_white"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/et_email_sign_up"/>-->
    <EditText
        android:id="@+id/et_password_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/str_password"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@drawable/bg_rectangle_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_phone"/>
    <EditText
        android:id="@+id/et_confim_rpassword_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@drawable/bg_rectangle_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_password_sign_up"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_30sdp"
        android:visibility="gone"
        android:layout_marginEnd="@dimen/_30sdp"
        android:elevation="@dimen/_2sdp"
        android:indeterminateTint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/btn_continue_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_continue_sign_up" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_continue_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_continue"
        app:cornerRadius="@dimen/_5sdp"
        android:textAllCaps="false"
        android:backgroundTint="@color/app_color"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:fontFamily="@font/roboto_bold"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:layout_marginStart="@dimen/_30sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_confim_rpassword_sign_up"/>

    <TextView
        android:id="@+id/tv_term_conditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_by_registering"
        android:textSize="@dimen/_9ssp"
        android:fontFamily="@font/roboto_light"
        android:layout_marginTop="@dimen/_5sdp"
        android:textColor="@color/color_text"
        app:layout_constraintTop_toBottomOf="@id/btn_continue_sign_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>