<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_black"
    tools:context="com.horizam.sapid.activities.ForgetPasswordEmailActivity">

    <ImageView
        android:id="@+id/iv_tikl_forget_pass_email"
        android:layout_width="@dimen/_120sdp"
        android:layout_height="@dimen/_120sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:src="@drawable/ic_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/tv_forget_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/forgot_password"
        android:textSize="@dimen/_20ssp"
        android:textColor="@color/color_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_tikl_forget_pass_email" />

    <TextView
        android:id="@+id/tv_enter_your_popl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_5sdp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/enter_your_tap_email_and_we_ll_n_send_you_a_6_digit_code"
        android:textAlignment="center"
        android:textSize="@dimen/_14ssp"
        android:textColor="@color/color_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_forget_password" />


    <EditText
        android:id="@+id/et_email_forget_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:background="@drawable/bg_rectangle_white"
        android:hint="@string/str_email"
        android:textColor="@color/color_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_enter_your_popl" />


    <ProgressBar
        android:visibility="gone"
        android:id="@+id/progressBar"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:elevation="@dimen/_2sdp"
        android:indeterminateTint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/btn_send_code_forget_pass"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_email_forget_pass" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_send_code_forget_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_30sdp"
        android:backgroundTint="@color/app_color"
        android:fontFamily="@font/roboto_bold"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:text="@string/str_send_code"
        android:textAllCaps="false"
        app:cornerRadius="@dimen/_5sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_email_forget_pass" />

    <TextView
        android:id="@+id/tv_back_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_3sdp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/str_back_to_login"
        android:textSize="@dimen/_12ssp"
        android:textColor="@color/color_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_send_code_forget_pass" />


</androidx.constraintlayout.widget.ConstraintLayout>